fix styles - dark mode

--- a/Components/AboutPage/AboutInformations.module.css
+++ b/Components/AboutPage/AboutInformations.module.css
@@ -7,6 +7,7 @@
     align-items: flex-start;
     justify-content: center;
     background-color: #f2f0ec;
+    margin: 30px 0;
     }
 
 .about__greetting{
